crates/compiler/parser/tests/snapshots/statements::local_tuple_destructuring_with_type.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { local (a, b): (felt, felt) = (100, 200); }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Local {
                            pattern: Tuple(
                                [
                                    Spanned(
                                        "a",
                                        21..22,
                                    ),
                                    Spanned(
                                        "b",
                                        24..25,
                                    ),
                                ],
                            ),
                            ty: Some(
                                Tuple(
                                    [
                                        Named(
                                            "felt",
                                        ),
                                        Named(
                                            "felt",
                                        ),
                                    ],
                                ),
                            ),
                            value: Spanned(
                                Tuple(
                                    [
                                        Spanned(
                                            Literal(
                                                100,
                                            ),
                                            44..47,
                                        ),
                                        Spanned(
                                            Literal(
                                                200,
                                            ),
                                            49..52,
                                        ),
                                    ],
                                ),
                                43..53,
                            ),
                        },
                        14..54,
                    ),
                ],
            },
            0..56,
        ),
    ),
]
