crates/compiler/parser/tests/snapshots/statements::loop_with_break.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { loop { break; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Loop {
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Break,
                                            21..27,
                                        ),
                                    ],
                                ),
                                19..29,
                            ),
                        },
                        14..29,
                    ),
                ],
            },
            0..31,
        ),
    ),
]
