crates/compiler/parser/tests/snapshots/statements::loop_with_continue.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { loop { continue; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Loop {
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            Continue,
                                            21..30,
                                        ),
                                    ],
                                ),
                                19..32,
                            ),
                        },
                        14..32,
                    ),
                ],
            },
            0..34,
        ),
    ),
]
