crates/compiler/parser/tests/snapshots/statements::member_assignment.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { obj.field = value; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Assignment {
                            lhs: Spanned(
                                MemberAccess {
                                    object: Spanned(
                                        Identifier(
                                            Spanned(
                                                "obj",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    field: Spanned(
                                        "field",
                                        16..21,
                                    ),
                                },
                                12..21,
                            ),
                            rhs: Spanned(
                                Identifier(
                                    Spanned(
                                        "value",
                                        24..29,
                                    ),
                                ),
                                24..29,
                            ),
                        },
                        12..30,
                    ),
                ],
            },
            0..32,
        ),
    ),
]
