crates/compiler/parser/tests/snapshots/statements::nested_blocks.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { { { let inner = 1; } let outer = 2; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Block(
                            [
                                Spanned(
                                    Block(
                                        [
                                            Spanned(
                                                Let {
                                                    pattern: Identifier(
                                                        Spanned(
                                                            "inner",
                                                            22..27,
                                                        ),
                                                    ),
                                                    statement_type: None,
                                                    value: Spanned(
                                                        Literal(
                                                            1,
                                                        ),
                                                        30..31,
                                                    ),
                                                },
                                                18..32,
                                            ),
                                        ],
                                    ),
                                    16..34,
                                ),
                                Spanned(
                                    Let {
                                        pattern: Identifier(
                                            Spanned(
                                                "outer",
                                                39..44,
                                            ),
                                        ),
                                        statement_type: None,
                                        value: Spanned(
                                            Literal(
                                                2,
                                            ),
                                            47..48,
                                        ),
                                    },
                                    35..49,
                                ),
                            ],
                        ),
                        14..51,
                    ),
                ],
            },
            0..53,
        ),
    ),
]
