crates/compiler/parser/tests/snapshots/statements::nested_loops.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { while (outer) { for inner in items { if (found) { break; } } } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        While {
                            condition: Spanned(
                                Identifier(
                                    Spanned(
                                        "outer",
                                        21..26,
                                    ),
                                ),
                                21..26,
                            ),
                            body: Spanned(
                                Block(
                                    [
                                        Spanned(
                                            For {
                                                variable: Spanned(
                                                    "inner",
                                                    34..39,
                                                ),
                                                iterable: Spanned(
                                                    Identifier(
                                                        Spanned(
                                                            "items",
                                                            43..48,
                                                        ),
                                                    ),
                                                    43..48,
                                                ),
                                                body: Spanned(
                                                    Block(
                                                        [
                                                            Spanned(
                                                                If {
                                                                    condition: Spanned(
                                                                        Identifier(
                                                                            Spanned(
                                                                                "found",
                                                                                55..60,
                                                                            ),
                                                                        ),
                                                                        55..60,
                                                                    ),
                                                                    then_block: Spanned(
                                                                        Block(
                                                                            [
                                                                                Spanned(
                                                                                    Break,
                                                                                    64..70,
                                                                                ),
                                                                            ],
                                                                        ),
                                                                        62..72,
                                                                    ),
                                                                    else_block: None,
                                                                },
                                                                51..72,
                                                            ),
                                                        ],
                                                    ),
                                                    49..74,
                                                ),
                                            },
                                            30..74,
                                        ),
                                    ],
                                ),
                                28..76,
                            ),
                        },
                        14..76,
                    ),
                ],
            },
            0..78,
        ),
    ),
]
