crates/compiler/parser/tests/snapshots/statements::return_with_value.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { return 42; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    Literal(
                                        42,
                                    ),
                                    21..23,
                                ),
                            ),
                        },
                        14..24,
                    ),
                ],
            },
            0..26,
        ),
    ),
]
