crates/compiler/parser/tests/snapshots/statements::return_without_value.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { return; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Return {
                            value: None,
                        },
                        12..19,
                    ),
                ],
            },
            0..21,
        ),
    ),
]
