crates/compiler/parser/tests/snapshots/statements::simple_assignment.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
fn test() { x = 5; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Tuple(
                    [],
                ),
                body: [
                    Spanned(
                        Assignment {
                            lhs: Spanned(
                                Identifier(
                                    Spanned(
                                        "x",
                                        12..13,
                                    ),
                                ),
                                12..13,
                            ),
                            rhs: Spanned(
                                Literal(
                                    5,
                                ),
                                16..17,
                            ),
                        },
                        12..18,
                    ),
                ],
            },
            0..20,
        ),
    ),
]
