crates/compiler/parser/tests/snapshots/statements::simple_block.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Code ---
func test() { { let x = 1; let y = 2; } }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Block(
                            [
                                Spanned(
                                    Let {
                                        pattern: Identifier(
                                            Spanned(
                                                "x",
                                                20..21,
                                            ),
                                        ),
                                        statement_type: None,
                                        value: Spanned(
                                            Literal(
                                                1,
                                            ),
                                            24..25,
                                        ),
                                    },
                                    16..26,
                                ),
                                Spanned(
                                    Let {
                                        pattern: Identifier(
                                            Spanned(
                                                "y",
                                                31..32,
                                            ),
                                        ),
                                        statement_type: None,
                                        value: Spanned(
                                            Literal(
                                                2,
                                            ),
                                            35..36,
                                        ),
                                    },
                                    27..37,
                                ),
                            ],
                        ),
                        14..39,
                    ),
                ],
            },
            0..41,
        ),
    ),
]
